crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__call__string.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/call/string.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (call +3 "str")))

----- stderr -----
